--- a/Alfred/Droppy.alfredworkflow/info.plist
+++ b/Alfred/Droppy.alfredworkflow/info.plist
@@ -8,11 +8,11 @@
 	<string>Productivity</string>
 	<key>connections</key>
 	<dict>
-		<key>8A1B2C3D-4E5F-6789-ABCD-EF0123456789</key>
+		<key>UA-SHELF-001</key>
 		<array>
 			<dict>
 				<key>destinationuid</key>
-				<string>SHELF-ACTION-UUID-1234-567890ABCDEF</string>
+				<string>RS-SHELF-001</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
@@ -21,11 +21,11 @@
 				<string></string>
 			</dict>
 		</array>
-		<key>9B2C3D4E-5F6A-789B-CDEF-0123456789AB</key>
+		<key>UA-BASKET-001</key>
 		<array>
 			<dict>
 				<key>destinationuid</key>
-				<string>BASKET-ACTION-UUID-5678-90ABCDEF1234</string>
+				<string>RS-BASKET-001</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
@@ -45,47 +45,44 @@
 	<string>Droppy</string>
 	<key>objects</key>
 	<array>
-		<!-- File Action: Add to Shelf -->
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>acceptsmulti</key>
-				<true/>
-				<key>filetypes</key>
-				<array>
-					<string>public.item</string>
-				</array>
+				<key>argumenttreatemptyaliases</key>
+				<false/>
+				<key>argumenttrimaliases</key>
+				<false/>
+				<key>argumenttype</key>
+				<integer>0</integer>
 				<key>name</key>
 				<string>Add to Droppy Shelf</string>
 			</dict>
 			<key>type</key>
-			<string>alfred.workflow.trigger.fileaction</string>
+			<string>alfred.workflow.trigger.action</string>
 			<key>uid</key>
-			<string>8A1B2C3D-4E5F-6789-ABCD-EF0123456789</string>
+			<string>UA-SHELF-001</string>
 			<key>version</key>
 			<integer>1</integer>
 		</dict>
-		<!-- File Action: Add to Basket -->
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>acceptsmulti</key>
-				<true/>
-				<key>filetypes</key>
-				<array>
-					<string>public.item</string>
-				</array>
+				<key>argumenttreatemptyaliases</key>
+				<false/>
+				<key>argumenttrimaliases</key>
+				<false/>
+				<key>argumenttype</key>
+				<integer>0</integer>
 				<key>name</key>
 				<string>Add to Droppy Basket</string>
 			</dict>
 			<key>type</key>
-			<string>alfred.workflow.trigger.fileaction</string>
+			<string>alfred.workflow.trigger.action</string>
 			<key>uid</key>
-			<string>9B2C3D4E-5F6A-789B-CDEF-0123456789AB</string>
+			<string>UA-BASKET-001</string>
 			<key>version</key>
 			<integer>1</integer>
 		</dict>
-		<!-- Run Script: Shelf -->
 		<dict>
 			<key>config</key>
 			<dict>
@@ -105,11 +102,10 @@
 			<key>type</key>
 			<string>alfred.workflow.action.script</string>
 			<key>uid</key>
-			<string>SHELF-ACTION-UUID-1234-567890ABCDEF</string>
+			<string>RS-SHELF-001</string>
 			<key>version</key>
 			<integer>2</integer>
 		</dict>
-		<!-- Run Script: Basket -->
 		<dict>
 			<key>config</key>
 			<dict>
@@ -129,57 +125,37 @@
 			<key>type</key>
 			<string>alfred.workflow.action.script</string>
 			<key>uid</key>
-			<string>BASKET-ACTION-UUID-5678-90ABCDEF1234</string>
+			<string>RS-BASKET-001</string>
 			<key>version</key>
 			<integer>2</integer>
 		</dict>
 	</array>
 	<key>readme</key>
-	<string>## Droppy Alfred Workflow
-
-Quickly add files to Droppy from Finder using Alfred file actions.
-
-### Usage
-
-1. Select files in Finder
-2. Activate Alfred (⌘ + Space)
-3. Type "Actions" or use your file action hotkey
-4. Choose "Add to Droppy Shelf" or "Add to Droppy Basket"
-
-### Actions
-
-- **Add to Droppy Shelf**: Sends files to the notch shelf area
-- **Add to Droppy Basket**: Sends files to the floating basket
-
-### Requirements
-
-- Droppy v4.9+ (with URL scheme support)
-- Alfred 4+ with Powerpack
-</string>
+	<string></string>
 	<key>uidata</key>
 	<dict>
-		<key>8A1B2C3D-4E5F-6789-ABCD-EF0123456789</key>
+		<key>UA-SHELF-001</key>
 		<dict>
 			<key>xpos</key>
 			<real>100</real>
 			<key>ypos</key>
 			<real>100</real>
 		</dict>
-		<key>9B2C3D4E-5F6A-789B-CDEF-0123456789AB</key>
+		<key>UA-BASKET-001</key>
 		<dict>
 			<key>xpos</key>
 			<real>100</real>
 			<key>ypos</key>
 			<real>250</real>
 		</dict>
-		<key>SHELF-ACTION-UUID-1234-567890ABCDEF</key>
+		<key>RS-SHELF-001</key>
 		<dict>
 			<key>xpos</key>
 			<real>350</real>
 			<key>ypos</key>
 			<real>100</real>
 		</dict>
-		<key>BASKET-ACTION-UUID-5678-90ABCDEF1234</key>
+		<key>RS-BASKET-001</key>
 		<dict>
 			<key>xpos</key>
 			<real>350</real>
