Remove spammy DND console logs + update macOS versions in templates
- DNDManager: Only log on actual state changes, not every 20 polls
- Bug report template: Add macOS 26 Tahoe, remove old Monterey

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -22,11 +22,11 @@ body:
     attributes:
       label: macOS Version
       options:
+        - macOS 26 (Tahoe)
         - macOS 15 (Sequoia)
         - macOS 14 (Sonoma)
         - macOS 13 (Ventura)
-        - macOS 12 (Monterey)
-        - Other
+        - Other / Older
     validations:
       required: true
 
